# AMC

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: CPU.h  InstructionFactory.h  InstructionNotSupportedExeception.h  InstructionParser.h  InvalidInstructionException.h  ProgramTerminateException.h  RAM.h  Timer.h  Util.h
include/commands/: ADDIInstruction.h  ADDInstruction.h  IInstruction.h  JInstruction.h  MIPSInstruction.h  RInstruction.h
include/instructions/: ADDIInstruction.h  ADDIUInstruction.h  ADDInstruction.h  ADDUInstruction.h  ANDIInstruction.h  ANDInstruction.h  BEQInstruction.h  BGEZInstruction.h  DIVInstruction.h  IInstruction.h  JALInstruction.h  JInstruction.h  JRInstruction.h  JUMPInstruction.h  JumpInstruction.h  LBInstruction.h  LUIInstruction.h  LWInstruction.h  MFHIInstruction.h  MFLOInstruction.h  MIPSInstruction.h  MULTInstruction.h  NOOPInstruction.h  NullInstruction.h  ORIInstruction.h  RInstruction.h  SBInstruction.h  SUBInstruction.h  SWInstruction.h  SyscallInstruction.h  XORInstruction.h  all.h
src/: CPU.cpp  InstructionFactory.cpp  InstructionNotSupportedExeception.cpp  InstructionParser.cpp  InvalidInstructionException.cpp  ProgramTerminateException.cpp  RAM.cpp  Timer.cpp  Util.cpp
src/commands/: ADDIInstruction.cpp  ADDInstruction.cpp  IInstruction.cpp  JInstruction.cpp  MIPSInstruction.cpp  NullInstruction.cpp  RInstruction.cpp
src/instructions/: ADDIInstruction.cpp  ADDIUInstruction.cpp  ADDInstruction.cpp  ADDUInstruction.cpp  ANDIInstruction.cpp  ANDInstruction.cpp  BEQInstruction.cpp  BGEZInstruction.cpp  DIVInstruction.cpp  IInstruction.cpp  JALInstruction.cpp  JInstruction.cpp  JRInstruction.cpp  JUMPInstruction.cpp  JumpInstruction.cpp  LBInstruction.cpp  LUIInstruction.cpp  LWInstruction.cpp  MFHIInstruction.cpp  MFLOInstruction.cpp  MIPSInstruction.cpp  MULTInstruction.cpp  NOOPInstruction.cpp  NullInstruction.cpp  ORIInstruction.cpp  RInstruction.cpp  SBInstruction.cpp  SUBInstruction.cpp  SWInstruction.cpp  SyscallInstruction.cpp
test/: cpu.cpp  format.cpp  instructions.cpp  test.cpp  util.cpp
test/files/: hello  hello_data  simple_loop  test
